# protots

./: Cargo.toml  README.md
.github/workflows/: build.yml
assets/: example.proto
src/: errors.rs  main.rs  parser.rs  typescript.rs
