[package]
authors = ["kongo2002 <kongo2002@gmail.com>"]
homepage = "https://github.com/kongo2002/protots"
repository = "https://github.com/kongo2002/protots"
description = "Protobuf parser to generate typescript types"
name = "protots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.49"
